<resources>
    <string name="app_name">Expense Manager</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0,00 грн.</string>
    <string name="comma">,</string>
    <string name="CANCEL">Cancel</string>
    <string name="OK">OK</string>
    <string name="UAH">грн.</string>
    <string name="zero_zero">00</string>
</resources>
