<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_divide_line"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_integer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:text="@string/zero"
            android:textSize="@dimen/dialog_summ_tv_text_size" />

        <RelativeLayout
            android:id="@+id/dialog_erase_rl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_number_selector">

            <ImageView
                android:id="@+id/dialog_erase_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:src="@drawable/ic_content_backspace" />
        </RelativeLayout>

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:id="@+id/dialog_one"
                style="@style/dialog_numbers_btn_style"
                android:tag="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/dialog_two"
                style="@style/dialog_numbers_btn_style"
                android:tag="2"
                android:text="@string/two" />

            <Button
                android:id="@+id/dialog_three"
                style="@style/dialog_numbers_btn_style"
                android:tag="3"
                android:text="@string/three" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/dialog_four"
                style="@style/dialog_numbers_btn_style"
                android:tag="4"
                android:text="@string/four" />

            <Button
                android:id="@+id/dialog_five"
                style="@style/dialog_numbers_btn_style"
                android:tag="5"
                android:text="@string/five" />

            <Button
                android:id="@+id/dialog_six"
                style="@style/dialog_numbers_btn_style"
                android:tag="6"
                android:text="@string/six" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/dialog_seven"
                style="@style/dialog_numbers_btn_style"
                android:tag="7"
                android:text="@string/seven" />

            <Button
                android:id="@+id/dialog_eight"
                style="@style/dialog_numbers_btn_style"
                android:tag="8"
                android:text="@string/eight" />

            <Button
                android:id="@+id/dialog_nine"
                style="@style/dialog_numbers_btn_style"
                android:tag="9"
                android:text="@string/nine" />
        </TableRow>

        <TableRow android:background="@drawable/background_divide_line">

            <Button
                android:id="@+id/dialog_comma"
                style="@style/dialog_numbers_btn_style"
                android:text="@string/comma" />

            <Button
                android:id="@+id/dialog_zero"
                style="@style/dialog_numbers_btn_style"
                android:tag="0"
                android:text="0" />

            <Space
                android:layout_weight="1"
                android:gravity="center_horizontal" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/dialog_ok"
            android:layout_toStartOf="@+id/dialog_ok"
            android:text="@string/CANCEL" />

        <Button
            android:id="@+id/dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/OK" />

    </RelativeLayout>
</LinearLayout>